--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap');
+
+
 @import url("components/banner.css");
 @import url("components/sense.css");
 @import url("components/faqs.css");
@@ -18,4 +21,10 @@ h6 {
 
 p {
   font-size:  16px;
+}
+
+
+
+h1,h2,h3,h4,h5,h6,p {
+  font-family: 'Inter', sans-serif;
 }
