--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import url("components/banner.css");
 @import url("components/sense.css");
 @import url("components/faqs.css");
+@import url("components/hello.css");
 
 h2 {
   font-size: 48px;
